feat: add env file for db config

--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mysql": "^2.15.0",
+    "nodemon": "^2.0.4",
     "reload": "^2.2.2"
   }
 }
