--- a/axolo_app/pubspec.yaml
+++ b/axolo_app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   webview_flutter: ^0.3.22+1
   geolocator: ^5.3.2+2
   timeline_tile: ^0.1.2
+  http: ^0.12.2
+  flutter_driving_directions: ^0.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
