--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,9 @@
     "mysql": "^2.15.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
+    "qrcode-generator": "^1.4.4",
     "reload": "^2.2.2",
+    "uuid": "^8.3.0",
     "winston": "^3.3.3"
   }
 }
